2000-11-13	Jiri Gaisler <jgais@ws.estec.esa.nl>

	* README.configure, aclocal/bsp-alias.m4, aclocal/check-bsps.m4:
	Modified to reflect addition of LEON BSPs as well as the 
	no-FP ERC32 variant.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/gcc-pipe.m4: Use $GCC instead of ac_cv_prog_gcc (autoconf
	standard).
	* aclocal/gcc-specs.m4: Use $GCC instead of ac_cv_prog_gcc (autoconf
	standard).
	* aclocal/multilib.m4: Fix m4-quoting (BUG-FIX).
	* aclocal/check-bsp-cache.m4: Fix m4-quoting (autoconf-2.49b).
	* aclocal/prog-cc.m4: Use $GCC instead of ac_cv_prog_gcc (autoconf
	standard), replace CC_FOR_TARGET with CC (BUG-FIX).

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/enable-itron.m4: Remove changequotes (autoconf-2.49b).
	* aclocal/enable-posix.m4: Remove changequotes (autoconf-2.49b), use
	$host instead of $target (BUG-FIX).
	* configure.in: Use $target and $host instead of $target_alias and
	$host_alias (autoconf-2.49b).
	* aclocal/check-newlib.m4: Remove CC_FOR_TARGET (BUG-FIX)
	* aclocal/sysv-ipc.m4: Move AC_DEFINE outside of AC_CACHE (BUG-FIX)

	NOTES:
	* autoconf-2.49b depredicates using changequotes.
	* The changes to configure.in are due to cleanups in
	autoconf-2.49b's implemention of canonicalization. With
	autoconf-2.1x it wasn't always clear, when to use $xxx or
	$xxx_alias. Now this is clear.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonicalize-tools.m4, aclocal/check-tool.m4,
	aclocal/prog-cc.m4, aclocal/prog-cxx.m4:  Replace AC_CHECK_TOOL
	with an RTEMS specific but more restrictive autoconf macro.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/lib.am: Add LD.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonicalize-tools.m4: Remove RTEMS_PATH_TOOL, use
	AC_CHECK_TOOL instead of RTEMS_PATH_TOOL in RTEMS_CANONICALIZE_TOOLS.
